# RootSightV2

./: .env.example  .env.local  .gitignore  CONTRIBUTING.md  README.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  test_failures.txt  test_failures_2.txt  tsconfig.tsbuildinfo
docs/: PRD.md
graphify-out/: .graphify_ast.json  .graphify_cached.json  .graphify_detect.json  .graphify_python  .graphify_uncached.txt  GRAPH_REPORT.md  graph.html  graph.json
rootsight/backend/: action_module.py  api_response.py  config.py  impact_module.py  ingestion_service.py  main.py  memory_module.py  pipeline_orchestrator.py  rca_module.py  timeline_module.py  trigger_service.py
rootsight/tests/: conftest.py  test_api_routes.py  test_e2e_pipeline.py  test_memory_actions.py  test_rca.py  test_timeline.py
scripts/: check_db.py  list_models.py  precompute_demos.py  test_api.py
src/: main.py
src/app/: globals.css  layout-client.tsx  layout.tsx  page.tsx
src/components/: ActionsCard.tsx  BottomBar.tsx  ConfidenceBar.tsx  ImpactCard.tsx  MemoryCard.tsx  Nav.tsx  PipelineTracker.tsx  RCAPanel.tsx  ScriptCard.tsx  StatusBadge.tsx  TimelinePanel.tsx  Toast.tsx  TriggerModal.tsx
src/hooks/: useToast.ts
src/lib/: api.ts  mock-data.ts  utils.ts
src/schemas/: action.py  event.py  hypothesis.py  impact.py  incident.py  similar_incident.py
src/types/: incident.ts  index.ts
src/utils/: api_response.py  config.py  database.py
tests/backend/: conftest.py  test_api_routes.py  test_e2e_pipeline.py  test_llm_clients.py  test_memory_actions.py  test_rca.py  (+2 more)
(+23 files in other folders)
